Adicionada a lógica de troca de abas tanto do frontend como do processamento dos dados enviados através do formulário html. Agora são plotados até 5 sinais que podem ser escolhidos ao selecionar as abas. Se faz necessário separar cada entrada em um dicionário diferente

--- a/Django/home/templates/home/aba-central.html
+++ b/Django/home/templates/home/aba-central.html
@@ -1,6 +1,6 @@
 <div id = "aba-central">
     <div class="barra-aplicacoes">
-            <div id = "aba-osciloscopio" class ="aba-aplicacao" role="button" tabindex="0" onclick=window.alert('Oi')>
+            <div id = "aba-osciloscopio" class ="aba-aplicacao" role="button" tabindex="0">
                 <h3>Domínio do tempo</h3>
             </div>
 
