--- a/Django/home/templates/home/formulario-unidades.html
+++ b/Django/home/templates/home/formulario-unidades.html
@@ -4,7 +4,7 @@
     <div class="form-container">
       <!-- Amplitude -->
       <div class="form-group">
-        <label for="amplitude" class="form-label">Amplitude</label>
+        <label for="unidade-amplitude" class="form-label">Amplitude</label>
         <div class="form-select">
           <select name="unidade-amplitude" id="unidade-amplitude">
             <option value="m">m</option>
