--- a/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
+++ b/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
@@ -27,7 +27,7 @@
 }
 
 #abas-sinais{
-    height: 60%;
+    height: 100%;
 }
 
 #container-sinais{
@@ -48,7 +48,6 @@
     width: 50%;
     height: 100%;
   
-    border: 1px solid white;
 
     display: flex;
     justify-content: center;
@@ -89,6 +88,22 @@ flex: 1;
     
 }
 
+
+.botao-sinal{
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    font: Helvetica;
+    transition: border-color 0.3s ease;
+
+}
+
+.botao-sinal.active{
+    border: 2px solid #007bff;
+    font: Helvetica;
+    font-weight: bold;
+
+}
 
 
 #botao-input{
