--- a/Django/home/templates/home/aba-central.html
+++ b/Django/home/templates/home/aba-central.html
@@ -1,30 +1,35 @@
 <div id = "aba-central">
     <div class="barra-aplicacoes">
-            <div id = "aba-osciloscopio" class ="aba-aplicacao" role="button" tabindex="0">
-                <h3>Domínio do tempo</h3>
+            <div id = "aba-osciloscopio" class ="aba-aplicacao" data-aba = "tempo">
+                <button class = "aba-btn active">Domínio do tempo</button>
             </div>
 
-        <a href="http://127.0.0.1:8000/home/espectro" id="ancora-espectro"> 
-            <div id = "aba-espectro" class="aba-aplicacao" role="button" tabindex="0">
-                <h3>Espectro</h2>
+            <div id = "aba-espectro" class="aba-aplicacao" data-aba = "frequencia">
+                <button class = "aba-btn" >Espectro</button>
             </div>
-        </a> 
-
     </div>
 
     <div class="barra-sinais">
 
     </div>
     <div class="area-grafico">
-        <div class = "grafico">
+        <div class = "grafico" id = "grafico_tempo">
             {{ div | safe }}
-            <!-- Scripts do Bokeh -->
             {{ cdn_js | safe }}
-            {{ script | safe }}   
+            {{ script | safe }}
         </div>
+        <div class = "grafico" id = "grafico_frequencia" style="display: none;">
+            {{ div_freq | safe }}
+            {{ script_freq | safe }}    
+
+        </div>
+
 
     </div>  
 </div>
+
+<!-- Scripts do Bokeh -->
+
 
 <!--
 
