--- a/Django/templates/static/osciloscopio/css/componentes/aba-central.css
+++ b/Django/templates/static/osciloscopio/css/componentes/aba-central.css
@@ -25,8 +25,6 @@
 
     
     /*background-color: var(--cinza-medio);*/
-    border-right: 1px solid white;
-
 
 
     cursor: pointer;
@@ -40,11 +38,6 @@
     transform-origin: bottom center; /* Ponto de origem na base */
     transform: scale(1.1); /* Aumenta apenas na vertical (para cima) */
     transition: transform 0.3s ease; /* Animação suave */
-
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border: 1px solid white;
-    border-bottom: 0px;
 
     z-index: 2;
 
@@ -70,7 +63,7 @@
 
 }
 
-.grafico{
+.grafico_tempo{
 
     width: 95%;
     height: 90%;
@@ -83,8 +76,24 @@
 
 }
 
-#ancora-espectro{
+.aba-btn{
     width: 100%;
     height: 100%;
-    text-decoration: none;
+    background-color: inherit;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    border-color: white;
+    cursor: pointer;
+}
+
+.aba-btn.active{
+    background: #b3b3b3;
+    transform: scale(1.5em);
+    color: white;
+    border-bottom: 3px solid #2472a5;
+}
+
+/* Garante que o gráfico do Bokeh ocupe todo o espaço */
+.bk-root {
+    width: 100% !important;
 }
