Implementei a lógica de alteração de cor da abinha selecionada (aba-direita). Comecei o estudo sobre enviar os formulários para atualizar o js

--- a/Django/home/templates/home/aba-direita.html
+++ b/Django/home/templates/home/aba-direita.html
@@ -1,3 +1,5 @@
+{{ sinais_json|json_script:"sinais-data" }}
+
 <div class="aba" id="aba-direita">
     <div class="container-titulo" id="container-entradas-titulo">
         <h2 >Entradas</h2>
