--- a/Django/home/templates/home/formulario-entradas.html
+++ b/Django/home/templates/home/formulario-entradas.html
@@ -42,7 +42,7 @@
         <div class="form-group" id="grupo-frequencia">
             <label for="entrada-frequencia" class="form-label">Frequência</label>
             <div class="form-number">
-                <input type="number" name="entrada-frequencia" id="entrada-frequencia" min= 0 max = 100  value = {{frequencia}}  required>
+                <input type="number" name="entrada-frequencia" id="entrada-frequencia" min= 0 max = 100  value = {{frequencia}}  required data-sinais = '{{sinais_json|safe}}'>
             </div>            
         </div> 
         
