Adicionei os sinaizinhos em cima do gráfico

--- a/Django/home/templates/home/aba-central.html
+++ b/Django/home/templates/home/aba-central.html
@@ -10,6 +10,30 @@
     </div>
 
     <div class="barra-sinais">
+        <div class = "container-visualizacao-sinais" id = "cs1">
+            <label for="sinal1">S1</label>
+            <input type="checkbox" id = "sinal1"></input>
+        </div>
+
+        <div class = "container-visualizacao-sinais" id = "cs2">
+            <label for="sinal2">S2</label>
+            <input type="checkbox" id = "sinal2"></input>
+        </div>
+
+        <div class = "container-visualizacao-sinais" id = "cs3">
+            <label for="sinal3">S3</label>
+            <input type="checkbox" id = "sinal3"></input>
+        </div>
+
+        <div class = "container-visualizacao-sinais" id = "cs4">
+            <label for="sinal4">S4</label>
+            <input type="checkbox" id = "sinal4"></input>
+        </div>
+
+        <div class = "container-visualizacao-sinais" id = "cs5" > 
+            <label for="sinal5">S5</label>
+            <input type="checkbox" id = "sinal5"></input>
+        </div>
 
     </div>
     <div class="area-grafico">
