--- a/Django/home/templates/home/aba-direita.html
+++ b/Django/home/templates/home/aba-direita.html
@@ -39,7 +39,7 @@
         </div>
  
     </div>
-    <div class="container-inputs">
+    <div class="container-inputs" id = "container-inputs">
         
         {% include 'home/formulario-entradas.html' %}
 
