--- a/Django/home/templates/home/formulario-entradas.html
+++ b/Django/home/templates/home/formulario-entradas.html
@@ -42,7 +42,7 @@
         <div class="form-group" id="grupo-frequencia">
             <label for="entrada-frequencia" class="form-label">Frequência</label>
             <div class="form-number">
-                <input type="number" name="entrada-frequencia" id="entrada-frequencia" min= 0 max = 100  value = {{frequencia}}  required data-sinais = '{{sinais_json|safe}}'>
+                <input type="number" name="entrada-frequencia" id="entrada-frequencia" min= 0 max = 10000  value = {{frequencia}}  required data-sinais = '{{sinais_json|safe}}'>
             </div>            
         </div> 
         
@@ -78,7 +78,7 @@
         <div class="form-group" id="grupo-duty" style="display: none;">
             <label for="entrada-duty" class="form-label">Duty</label>
                 <div class="form-number">
-                    <input type="number" name="entrada-duty" id="entrada-duty" min= 0 max = 1 step = 0.05 value = "{{duty}}">
+                    <input type="number" name="entrada-duty" id="entrada-duty" min= 0 max = 1 step = 0.05 value = {{duty}}>
                 </div>            
         </div>
 
