--- a/Django/templates/static/osciloscopio/css/componentes/aba-central.css
+++ b/Django/templates/static/osciloscopio/css/componentes/aba-central.css
@@ -35,13 +35,36 @@
 }
 
 .barra-sinais{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
     width: 100%;
     height: 8%;
     border-top: 1px solid white;
 
+    padding-top: 10px;
     z-index: 0;
 }
 
+
+
+#cs1{
+    color: blue;
+}
+#cs2{
+    color: orange;
+}
+#cs3{
+    color: green;
+}
+#cs4{
+    color: red;
+}
+#cs5{
+    color: purple;
+}
 .area-grafico{
     
     flex: 1;
