--- a/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
+++ b/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
@@ -13,6 +13,7 @@
 
 #aba-direita{
 
+    display: block;
     width: 25%;
     border-right: none;
     border-bottom-left-radius: 0;
@@ -28,11 +29,13 @@
 
 #abas-sinais{
     height: 100%;
+
 }
 
 #container-sinais{
     flex: 0;
-    height: 10%;
+    height: 5%;
+
 }
 
 
@@ -48,7 +51,6 @@
     width: 50%;
     height: 100%;
   
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -76,7 +78,6 @@ flex: 1;
 }
 
 .container-inputs{
-    height: 60%;
  
     display: flex;
     flex-direction: column;
@@ -116,6 +117,7 @@ flex: 1;
 
     background: #4CAF50;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 
