--- a/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
+++ b/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
@@ -89,6 +89,11 @@ flex: 1;
     
 }
 
+#select-operacao{
+    max-width: 30%;
+}
+
+
 
 .botao-sinal{
     width: 100%;
@@ -138,8 +143,11 @@ flex: 1;
     width: 100%;
 
     display: flex;
+    flex-direction: row;
 
     justify-content: space-between;
+    align-items: center;
+
 }
 
 #par-number-sinal{
