Construção de todos os sinais, mas ta com um problema na hora de enviar os dados para o backend

--- a/Django/home/templates/home/formulario-entradas.html
+++ b/Django/home/templates/home/formulario-entradas.html
@@ -1,14 +1,14 @@
 <form  id = "form-entrada" action=" {% url 'osciloscopio' %}" method="post" class="formulario-entrada">
     {% csrf_token %}
 
-    <input type="hidden" name = "numero_sinal" id = "numero_sinal" value= "{{sinal_ativo|default:'1'}}">
+    <input type="hidden" name = "numero_sinal" id = "numero_sinal" value= 1>
     
     <!-- Forma do sinal -->
     <div class = "container-par-entradas" id = "par-number-sinal">
         <div class="form-group" id="grupo-forma-sinal">
             <label for="entrada-forma-sinal" class="form-label">Forma do sinal</label>
             <div class="form-select" id = "select-forma-sinal">
-                <select name="entrada-forma-sinal" id="entrada-forma-sinal" value = {{forma}}  >
+                <select name="entrada-forma-sinal" id="entrada-forma-sinal" value = "senoidal"  >
                     <option value="senoidal"  {% if ultima_forma == 'senoidal' %} selected {% endif %}>Senoidal</option>
                     <option value="quadrada"  {% if ultima_forma == 'quadrada' %} selected{% endif %}>Quadrada</option>
                     <option value="triangular" {% if ultima_forma == 'triangular' %} selected{% endif %} >Triangular</option>
@@ -24,7 +24,7 @@
         <div class="form-group" id="grupo-amplitude">
             <label for="entrada-amplitude" class="form-label">Amplitude</label>
             <div class="form-number">
-                <input type="number" name="entrada-amplitude" id="entrada-amplitude" min= 0 max = 100  value = {{amplitude}}  step = 1.00 required> 
+                <input type="number" name="entrada-amplitude" id="entrada-amplitude" min= 0 max = 100  value = 1  step = 1.00 required> 
             </div>            
         </div> 
 
@@ -32,7 +32,7 @@
         <div class="form-group" id="grupo-intervalo">
             <label for="entrada-rate" class="form-label">Rate</label>
             <div class="form-number">
-                <input type="number" name="entrada-rate" id="entrada-rate" min= 0 max = 5000 step = 5  value = {{rate}} required>
+                <input type="number" name="entrada-rate" id="entrada-rate" min= 0 max = 5000 step = 5  value = 1000 required>
             </div>            
         </div>
     </div>
@@ -42,15 +42,15 @@
         <div class="form-group" id="grupo-frequencia">
             <label for="entrada-frequencia" class="form-label">Frequência</label>
             <div class="form-number">
-                <input type="number" name="entrada-frequencia" id="entrada-frequencia" min= 0 max = 10000  value = {{frequencia}}  required data-sinais = '{{sinais_json|safe}}'>
+                <input type="number" name="entrada-frequencia" id="entrada-frequencia" min= 0 max = 10000  value = 1  required data-sinais = '{{sinais_json|safe}}'>
             </div>            
         </div> 
         
         <!-- Fase -->
         <div class="form-group" id="grupo-fase">
-            <label for="entrada-fase" class="form-label">Fase</label>
+            <label for="entrada-fase" class="form-label">Fase(π)</label>
             <div class="form-number">
-                <input type="number" name="entrada-fase" id="entrada-fase" min= 0 max = 100  value = {{fase}}   required>
+                <input type="number" name="entrada-fase" id="entrada-fase" min= 0 max = 100  value = 0 required>
             </div>            
         </div>
     </div>
@@ -60,15 +60,15 @@
         <div class="form-group" id="grupo-duracao">
             <label for="entrada-duracao" class="form-label">Duração</label>
             <div class="form-number">
-                <input type="number" name="entrada-duracao" id="entrada-duracao" min= 0 max = 100 value = {{duracao}} required>
+                <input type="number" name="entrada-duracao" id="entrada-duracao" min= 1 max = 100 value = 1 m required>
             </div>            
         </div> 
         
         <!-- Offset -->
-        <div class="form-group" id="grupo-intervalo">
+        <div class="form-group" id="grupo-offset">
             <label for="entrada-offset" class="form-label">Offset</label>
             <div class="form-number">
-                <input type="number" name="entrada-offset" id="entrada-offset" min= 0 max = 100 value = {{offset}} required>
+                <input type="number" name="entrada-offset" id="entrada-offset" value = 0 required>
             </div>            
         </div>
     </div>
@@ -100,7 +100,6 @@
     </div>
 
 
-    <button type="submit" id="botao-input" >Gerar sinal</button>
 </form>
 
 
