CONSEGUI ALTERAR TODOS OS SINAIS SEMPRE QUE ATUALIZA A API!!

--- a/Django/home/templates/home/aba-central.html
+++ b/Django/home/templates/home/aba-central.html
@@ -15,22 +15,22 @@
             <input type="checkbox" id = "sinal1"></input>
         </div>
 
-        <div class = "container-visualizacao-sinais" id = "cs2">
+        <div class = "container-visualizacao-sinais" id = "cs2" style="display: none;">
             <label for="sinal2">S2</label>
             <input type="checkbox" id = "sinal2"></input>
         </div>
 
-        <div class = "container-visualizacao-sinais" id = "cs3">
+        <div class = "container-visualizacao-sinais" id = "cs3" style="display: none;">
             <label for="sinal3">S3</label>
             <input type="checkbox" id = "sinal3"></input>
         </div>
 
-        <div class = "container-visualizacao-sinais" id = "cs4">
+        <div class = "container-visualizacao-sinais" id = "cs4" style="display: none;">
             <label for="sinal4">S4</label>
             <input type="checkbox" id = "sinal4"></input>
         </div>
 
-        <div class = "container-visualizacao-sinais" id = "cs5" > 
+        <div class = "container-visualizacao-sinais" id = "cs5" style="display: none;"> 
             <label for="sinal5">S5</label>
             <input type="checkbox" id = "sinal5"></input>
         </div>
