--- a/Django/home/templates/home/formulario-unidades.html
+++ b/Django/home/templates/home/formulario-unidades.html
@@ -9,8 +9,8 @@
           <select name="unidade-amplitude" id="unidade-amplitude">
             <option value="m">m</option>
             <option value="m/s">m/s</option>
-            <option value="m-s-s">m/s²</option>
-            <option value="graus-celsius">°C</option>
+            <option value="m/s²">m/s²</option>
+            <option value="°C">°C</option>
           </select>
         </div>
       </div>
