Ajeitei umas coisa (embelezei)

--- a/Django/home/templates/home/aba-central.html
+++ b/Django/home/templates/home/aba-central.html
@@ -1,7 +1,9 @@
 <div id = "aba-central">
+
+
     <div class="barra-aplicacoes">
             <div id = "aba-osciloscopio" class ="aba-aplicacao" data-aba = "tempo" >
-                <button class = "aba-btn active" id = "btn-tempo" onclick = "trocarAbas('tempo')">Domínio do tempo</button>
+                <button class = "aba-btn active" id = "btn-tempo" onclick = "trocarAbas('tempo')">Tempo</button>
             </div>
 
             <div id = "aba-espectro" class="aba-aplicacao" data-aba = "frequencia"  >
