--- a/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
+++ b/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
@@ -79,7 +79,7 @@ flex: 1;
 
 .container-inputs{
 
-    height: 55%;
+    height: 50%;
  
     display: flex;
     flex-direction: column;
@@ -176,3 +176,60 @@ flex: 1;
     width: 25%;
 }
 
+
+
+
+
+
+
+#blur-popup{
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+  
+    position: absolute;
+    background-color: black;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 100;
+  }
+
+  #popup-config{
+
+    position: absolute;
+
+    top: 0;
+    left: 0;
+    height: 40%;
+    width: 150px;
+  
+    display: flex;
+    flex-direction: column;
+  
+    justify-content: center;
+    align-items: center;
+  
+    background-color: white;
+    border-radius: 10px;
+
+    opacity: 0;
+    visibility: hidden;
+  
+    z-index: 101;
+  
+  }
+
+  #fechar-popup{
+    position: absolute;
+
+    top: 5px;
+    right: 10px;
+    background-color: red;
+  }
+
+    #container-checkboxes-cor{
+        position: relative;
+        display: flex;
+        width: 100%;
+    }
