Alterei de vez para parar de atualizar a API quando muda de sinais. Mudei a posição da duração de taxa de amostragem por serem entradas globais. ADicionei a lógica de mudança de unidades

--- a/Django/home/templates/home/aba-central.html
+++ b/Django/home/templates/home/aba-central.html
@@ -11,7 +11,9 @@
             </div>
     </div>
 
-    <div class="barra-sinais">
+    <div class="barra-sinais" id = "barra-sinais">
+
+        <p>Sinais ativos:</p>
         <div class = "container-visualizacao-sinais" id = "cs1" >
             <label for="sinal1">S1</label>
             <input type="checkbox" id = "sinal1" checked></input>
