--- a/Django/home/templates/home/aba-esquerda.html
+++ b/Django/home/templates/home/aba-esquerda.html
@@ -31,4 +31,25 @@
                     {% include 'home/formulario-unidades.html' %}
                 </div>
 
+                <hr style="width: 100%; margin: 0; padding: 0; overflow: hidden; border:none;  height: 2px;background-color: black">  
+                
+                
+                <div id = "entradas-globais">
+                    <!-- Duração -->
+                      <div class="form-group" id="grupo-duracao">
+                          <label for="entrada-duracao" class="form-label">Duração</label>
+                          <div class="form-number">
+                              <input type="number" name="entrada-duracao" id="entrada-duracao" min= 1 max = 100 value = 1 m required>
+                          </div>            
+                      </div> 
+              
+                      <!-- Taxa de amostragem -->
+                      <div class="form-group" id="grupo-intervalo">
+                          <label for="entrada-rate" class="form-label">Rate</label>
+                          <div class="form-number">
+                              <input type="number" name="entrada-rate" id="entrada-rate" min= 0 max = 5000 step = 5  value = 1000 required>
+                          </div>            
+                      </div>
+                </div>
+
             </div>
