Mexendo no popuo das config

--- a/Django/home/templates/home/base.html
+++ b/Django/home/templates/home/base.html
@@ -12,15 +12,18 @@
         <!-- BLUR DO POPUP -->
 
         <div id = "blur-popup">
-            <div id = "popup-config">
-                <button id = "fechar-popup">X</button>
-                <label for="">Cor do gráfico:</label>
-                <div id="container-checkboxes-cor">
-                    <input type="checkbox" name="checkbox-preto" id="checkbox-preto">
-                    <input type="checkbox" name="checkbox-preto" id="checkbox-preto">
-                </div>
-            </div>
         </div>
+        <div id = "popup-config">
+            <button id = "fechar-popup">X</button>
+            <label for="cor">Cor do gráfico<label>
+            <div id="container-checkboxes-cor">
+                <input type="radio" name="cor" id="checkbox-preto" class="cor-btn" value = "black">
+                <input type="radio" name="cor" id="checkbox-branco" class = "cor-btn" value = "white">
+            </div>
+            <div id = "container-tamanho-fonte">
+
+            </div>
+            </div>
         <!-- janela-cabeçalho -->
         <div id ="janela-principal">
             {% include 'home/barra-superior.html' %}  <!-- Importa o cabeçalho -->
