--- a/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
+++ b/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
@@ -222,7 +222,7 @@ flex: 1;
     justify-content: center;
     align-items: center;
   
-    background-color: white;
+    background-color: #888888;
     border-radius: 10px;
 
     opacity: 0;
@@ -243,5 +243,31 @@ flex: 1;
     #container-checkboxes-cor{
         position: relative;
         display: flex;
+        justify-content: space-evenly;
         width: 100%;
+        margin-top: 20px
+    }
+    #checkbox-preto{
+
+        border: 1px solid black;
+    }
+    #checkbox-preto:checked{
+        background-color: #000;
+    }
+    #checkbox-branco{
+        border: 1px solid #ffffff;
+    }
+    #checkbox-branco:checked{
+        background-color: #ffffff;
+    }
+
+    .cor-btn{
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        width: 30px;
+        height: 30px;
+        border: 2px solid #000;
+        border-radius: 50%;
+        padding: 15px;
     }
