Alterei o nome da classe dos containers da direita, tava dando conflito com a função de mostrar o popup

--- a/Django/home/templates/home/aba-direita.html
+++ b/Django/home/templates/home/aba-direita.html
@@ -8,31 +8,31 @@
     <div class = "container-futuro" id = "container-sinais">
         <div id = "abas-sinais" class = "container-conjunto-abas" >
 
-            <div class = "container-aba" id = "sinal-1">
+            <div class = "cont-aba" id = "sinal-1">
                 <button type="button" class="botao-sinal {% if sinal_ativo == 1 %} active {% endif %}"
                 data-sinal="1">
                 S1
                 </button>
             </div>
-            <div class = "container-aba" id = "sinal-1">
+            <div class = "cont-aba" id = "sinal-2">
                 <button type="button" class="botao-sinal {% if sinal_ativo == 2 %} active {% endif %}"
                 data-sinal="2">
                 S2
                 </button>
             </div>  
-            <div class = "container-aba" id = "sinal-1">
+            <div class = "cont-aba" id = "sinal-3">
                 <button type="button" class="botao-sinal {% if sinal_ativo == 3 %}active{% endif %}"
                 data-sinal="3">
                 S3
                 </button>
             </div>  
-            <div class = "container-aba" id = "sinal-1">
+            <div class = "cont-aba" id = "sinal-4">
                 <button type="button" class="botao-sinal {% if sinal_ativo == 4 %}active{% endif %}"
                 data-sinal="4">
                 S4
                 </button>
             </div>  
-            <div class = "container-aba" id = "sinal-1">
+            <div class = "cont-aba" id = "sinal-5">
                 <button type="button" class="botao-sinal {% if sinal_ativo == 5 %} active {% endif %}" data-sinal="5">S5</button>
             </div>  
 
