--- a/Django/templates/static/osciloscopio/css/componentes/aba-central.css
+++ b/Django/templates/static/osciloscopio/css/componentes/aba-central.css
@@ -41,7 +41,7 @@
     align-items: center;
 
     width: 100%;
-    height: 8%;
+    height: 5%;
     border-top: 1px solid white;
 
     padding-top: 10px;
@@ -65,9 +65,13 @@
 #cs5{
     color: purple;
 }
+
+#cs6{
+    color: magenta;
+}
 .area-grafico{
-    
-    flex: 1;
+    width: 100%;
+    height: 85%;
 
     display: flex;
     flex-direction: column;
@@ -86,6 +90,7 @@
     align-items: center;
     justify-content: center;
 
+    margin: 10px;
     box-shadow: 1px 1px 4px;
 
 }
