--- a/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
+++ b/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
@@ -1,5 +1,4 @@
 .aba {
-    width: 10%;
     height: 100%;
     background: var(--cinza-claro);
     border-right: var(--espessura-borda) solid #666;
@@ -9,6 +8,10 @@
     display: flex;
     flex-direction: column;
 
+}
+
+#aba-esquerda{
+    width: 5%;
 }
 
 #aba-direita{
@@ -170,6 +173,7 @@ flex: 1;
 }
 
 
+
 #form-entrada{
     width: 100%;
     height: 100%;
@@ -215,6 +219,13 @@ flex: 1;
 
 #abas-futuras>div{
     width: 25%;
+}
+
+
+#entrada-operacao{
+    width: 40px;
+    border: solid 1px green;
+    margin: 0;
 }
 
 
