Pequenas mudanças de layout e reponsividade. Mudei tamanho da tela original para ter no máximo 1440px de largura. Adicionei o aviso no celular para só usar no modo paisagem. ESTÁ COM UM BUG DE VISUALIZAÇÃO, PRECISO DEFINIR MELHOR O TAMANHO DA ALTURA DA JANELA, E TAMBÉM AJUSTAR O MAX-HEIGHT

--- a/Django/home/templates/home/base.html
+++ b/Django/home/templates/home/base.html
@@ -23,7 +23,15 @@
             <div id = "container-tamanho-fonte">
 
             </div>
-            </div>
+        </div>
+
+        <!-- AVISO DE ROTAÇÃO PARA MOBILE -->
+
+          <div id="rotate-warning" style="display:none; align-items:center; justify-content:center; height:100vh; text-align:center; background:#000; color:#fff;">
+            <p> Gire o celular para o modo horizontal para usar o GerOndApp.</p>
+          </div>
+
+
         <!-- janela-cabeçalho -->
         <div id ="janela-principal">
             {% include 'home/barra-superior.html' %}  <!-- Importa o cabeçalho -->
