--- a/Django/templates/static/osciloscopio/css/componentes/janela.css
+++ b/Django/templates/static/osciloscopio/css/componentes/janela.css
@@ -1,6 +1,10 @@
 #janela-principal {
     width: var(--largura-janela);
     height: var(--altura-janela);
+    max-width: 1440px;
+    min-width: 320px;
+    min-height: 600px;
+
     background: var(--cinza-medio);
     box-shadow: var(--sombra-interna);
     border-radius: var(--curva-borda);
