Revert "Conserto do último bug, foi apenas mudar o display de block para flex…"

--- a/Django/home/templates/home/formulario-unidades.html
+++ b/Django/home/templates/home/formulario-unidades.html
@@ -7,7 +7,7 @@
         <label for="unidade-amplitude" class="form-label">Amplitude</label>
         <div class="form-select">
           <select name="unidade-amplitude" id="unidade-amplitude">
-            <option value="m" selected>m</option>
+            <option value="m">m</option>
             <option value="m/s">m/s</option>
             <option value="m/s²">m/s²</option>
             <option value="°C">°C</option>
@@ -44,8 +44,8 @@
         <div class="form-select">
           <select name="unidade-periodo" id="unidade-periodo">
             <option value="m">m</option>
-            <option value="m/s">ms</option>
-            <option value="m/s²">μs</option>
+            <option value="m/s">m/s</option>
+            <option value="m/s²">m/s²</option>
           </select>        
         </div>
       </div>
